--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Chonnipa Kittisiriprasert (chonnipa.kit@gmail.com)",
   "license": "MIT",
   "scripts": {
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
+    "deploy": "gatsby build && gh-pages -d public -b master",
     "dev": "gatsby develop",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "lint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'",
