Added copy to clipboard functionality

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "modern-normalize": "^0.5.0",
     "polished": "^2.2.0",
     "react": "^16.5.2",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.5.2",
     "react-emotion": "^9.2.12",
     "react-helmet": "^5.2.0",
