--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/lodash": "^4.14.117",
     "@types/node": "^10.12.0",
     "@types/react": "^16.4.17",
+    "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-helmet": "^5.0.7",
     "gh-pages": "^2.0.1",
     "prettier": "^1.14.3",
