--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react": "^16.4.17",
     "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-helmet": "^5.0.7",
+    "gatsby-plugin-favicon": "^3.1.4",
     "gh-pages": "^2.0.1",
     "prettier": "^1.14.3",
     "prettier-tslint": "^0.4.0",
