--- a/package.json
+++ b/package.json
@@ -14,46 +14,47 @@
     "tsc": "tsc"
   },
   "engines": {
-    "node": ">=10.11.0"
+    "node": ">=10.15.3"
   },
   "dependencies": {
-    "emotion": "^9.2.12",
-    "emotion-server": "^9.2.12",
-    "gatsby": "^2.0.24",
-    "gatsby-plugin-emotion": "^2.0.5",
-    "gatsby-plugin-google-fonts": "^0.0.4",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-typescript": "^2.0.0",
+    "@emotion/core": "^10.0.10",
+    "@emotion/styled": "^10.0.12",
+    "emotion": "^10.0.9",
+    "emotion-server": "^10.0.9",
+    "gatsby": "^2.9.4",
+    "gatsby-plugin-emotion": "^4.0.7",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-typescript": "^2.0.15",
     "lodash": "^4.17.11",
     "modern-normalize": "^0.5.0",
-    "polished": "^2.2.0",
-    "react": "^16.5.2",
+    "polished": "^3.4.0",
+    "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.5.2",
-    "react-emotion": "^9.2.12",
-    "react-helmet": "^5.2.0",
-    "react-icons": "^3.2.1",
-    "typescript": "^3.1.3"
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0",
+    "typescript": "^3.5.2"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.117",
-    "@types/node": "^10.12.0",
-    "@types/react": "^16.4.17",
+    "@types/lodash": "^4.14.134",
+    "@types/node": "^12.0.8",
+    "@types/react": "^16.8.20",
     "@types/react-copy-to-clipboard": "^4.2.6",
-    "@types/react-helmet": "^5.0.7",
-    "gatsby-plugin-favicon": "^3.1.4",
+    "@types/react-helmet": "^5.0.8",
+    "gatsby-plugin-favicon": "^3.1.6",
     "gh-pages": "^2.0.1",
-    "prettier": "^1.14.3",
-    "prettier-tslint": "^0.4.0",
-    "stylelint": "^9.6.0",
-    "stylelint-config-property-sort-order-smacss": "^4.0.0",
-    "stylelint-config-recommended": "^2.1.0",
+    "prettier": "^1.18.2",
+    "prettier-tslint": "^0.4.2",
+    "stylelint": "^10.1.0",
+    "stylelint-config-property-sort-order-smacss": "^5.0.0",
+    "stylelint-config-recommended": "^2.2.0",
     "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.5.0",
-    "tslint": "^5.11.0",
-    "tslint-config-airbnb": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
-    "tslint-plugin-prettier": "^2.0.0",
-    "tslint-react": "^3.6.0"
+    "stylelint-processor-styled-components": "^1.8.0",
+    "tslint": "^5.17.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.0.1",
+    "tslint-react": "^4.0.0"
   }
 }
