--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "deploy": "gatsby build && gh-pages -d public -b master",
+    "build": "gatsby build",
     "dev": "gatsby develop",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "lint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'",
