--- a/package.json
+++ b/package.json
@@ -18,44 +18,38 @@
     "node": ">=10.15.3"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.10",
-    "@emotion/styled": "^10.0.12",
-    "emotion": "^10.0.9",
-    "emotion-server": "^10.0.9",
-    "gatsby": "^2.9.4",
-    "gatsby-plugin-emotion": "^4.0.7",
+    "@emotion/core": "^10.0.27",
+    "@emotion/styled": "^10.0.27",
+    "emotion": "^10.0.27",
+    "emotion-server": "^10.0.27",
+    "gatsby": "^2.18.25",
+    "gatsby-plugin-emotion": "^4.1.21",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-typescript": "^2.0.15",
+    "gatsby-plugin-react-helmet": "^3.1.21",
+    "gatsby-plugin-typescript": "^2.1.26",
     "lodash": "^4.17.15",
-    "modern-normalize": "^0.5.0",
-    "polished": "^3.4.0",
-    "react": "^16.8.6",
-    "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.8.6",
+    "modern-normalize": "^0.6.0",
+    "polished": "^3.4.2",
+    "react": "^16.12.0",
+    "react-copy-to-clipboard": "^5.0.2",
+    "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-icons": "^3.7.0",
-    "typescript": "^3.5.2"
+    "react-icons": "^3.8.0",
+    "typescript": "^3.7.5"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.134",
-    "@types/node": "^12.0.8",
-    "@types/react": "^16.8.20",
-    "@types/react-copy-to-clipboard": "^4.2.6",
-    "@types/react-helmet": "^5.0.8",
+    "@types/lodash": "^4.14.149",
+    "@types/node": "^13.1.8",
+    "@types/react": "^16.9.17",
+    "@types/react-copy-to-clipboard": "^4.3.0",
+    "@types/react-helmet": "^5.0.15",
     "gatsby-plugin-favicon": "^3.1.6",
-    "gh-pages": "^2.0.1",
-    "prettier": "^1.18.2",
-    "prettier-tslint": "^0.4.2",
-    "stylelint": "^10.1.0",
-    "stylelint-config-property-sort-order-smacss": "^5.0.0",
-    "stylelint-config-recommended": "^2.2.0",
+    "gh-pages": "^2.2.0",
+    "prettier": "^1.19.1",
+    "stylelint": "^13.0.0",
+    "stylelint-config-property-sort-order-smacss": "^5.2.0",
+    "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.8.0",
-    "tslint": "^5.17.0",
-    "tslint-config-airbnb": "^5.11.1",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.0.1",
-    "tslint-react": "^4.0.0"
+    "stylelint-processor-styled-components": "^1.9.0"
   }
 }
